--- a/15_LocalStorage_and_EventDelegation/style.css
+++ b/15_LocalStorage_and_EventDelegation/style.css
@@ -75,3 +75,13 @@ html {
       outline:0;
       border:1px solid rgba(0,0,0,0.1);
     }
+    
+    
+    /* my mod */
+    
+    .buttons {
+      margin:20px 5px;
+      padding:10px;
+      outline:0;
+      border:1px solid rgba(0,0,0,0.1);
+    }
