--- a/30_WhackAMole_game/style.css
+++ b/30_WhackAMole_game/style.css
@@ -67,3 +67,22 @@ h1 {
 .hole.up .mole {
   top:0;
 }
+
+#startGame {
+    width: 12rem;
+    height: 6rem;
+    margin: 2rem auto 0;
+    border-radius: 1rem;
+    color: white;
+    background-color: #462020;
+    
+}
+
+#startGame > p {
+    padding: 0.4rem 2rem 1.4rem;
+    font-size: 4rem;
+    font-weight: bold;
+    letter-spacing: 0.2rem;
+    text-align: center;
+    cursor: pointer;
+}
